
2006-12-07 Kimmo
 PATCH: [ 1556685 ] Avoid infinite loop in character loop in crystal c++ parser
  Submitted by Perry
  Src/editlib: asp.cpp basic.cpp batch.cpp cplusplus.cpp csharp.cpp dcl.cpp fortran.cpp
   html.cpp innosetup.cpp is.cpp java.cpp lisp.cpp nsis.cpp. pascal.cpp perl.cpp php.cpp
   python.cpp rexx.cpp rsrc.cpp ruby.cpp sgml.cpp sh.cpp siod.cpp sql.cpp tcl.cpp tex.cpp
   xml.cpp

2006-12-04 Tim
 PATCH: [ 1607193 ] INI Syntax Improvements
  Src/editlib: ini.cpp
 PATCH: [ 1608541 ] Use INI highlighter for VB6 project files
  Src/editlib: ccrystaltextview.cpp

2006-12-06 Kimmo
 Add missing include to fix ANSI build target
  Src: FileOrFolderSelect.cpp

2006-12-04 Kimmo
 PATCH: [ 1512881 ] Fix memleak from charsets.c
  Src: charsets.cp charsets.h Merge.cpp
 PATCH: [ 1607823 ] Remove manifest loading from lang dlls
  Src/Languages/*: Merge*.rc

2006-12-03 Kimmo
 PATCH: [ 1607343 ] Fix filefilter regexp uppercasing for 2.6 branch
  Src: FileFilterMgr.cpp

2006-12-02 Takashi
 BUG: [ 1589324 ] WinMegee crashes on copy
  Src: Common/CShellFileOp.cpp

2006-12-02 Takashi
 BUG: [ 1603077 ] Doesn't filter the file vc60.idb using "Merge_VC_loose.flt"
  Filters: Merge_VC_loose.flt

2006-12-02 Takashi
 BUG: [ 1603061 ] "Copy Left/Right To .." doesn't work correctly
  Src: DirActions.cpp

2006-11-30 Kimmo
 PATCH: [ 1605682 ] Add Syntax Highlight option to config log
  Src: ConfigLog.cpp ConfigLog.h MainFrm.cpp

2006-11-30 Takashi
 BUG: [ 1603230 ] DirView icons isn't shown correctly on NT4.0
  Src/res: equalfile.ico fileskip.ico lfile.ico notequalfile.ico rfile.ico

2006-11-28 Kimmo
 PATCH: [ 1603196 ] Allow Open-dialog kind of folder selection for project files
  Src: FileOrFolderSelect.cpp FileOrFolderSelect.h OpenDlg.cpp OpenDlg.h
 PATCH: [ 1604078 ] Hide skipped items by default
  Src: OptionsInit.cpp

2006-11-27 Gal
 BUG: [ 1603562 ] Location pane's bar outlines
  Src: LocationView.cpp

2006-11-26 Kimmo