@@ -9,6 +9,8 @@ Add new items to top.
    html.cpp innosetup.cpp is.cpp java.cpp lisp.cpp nsis.cpp. pascal.cpp perl.cpp php.cpp
    python.cpp rexx.cpp rsrc.cpp ruby.cpp sgml.cpp sh.cpp siod.cpp sql.cpp tcl.cpp tex.cpp
    xml.cpp
+ PATCH: [ 1556688 ] Fix maketstring to check for zero-term by MultiByteToWideCha
+  Src: Common/unicoder.cpp
 
 2006-12-04 Tim
  PATCH: [ 1607193 ] INI Syntax Improvements
